# openvgr

./: CMakeLists.txt  ChangeLog.0  Install_OpenVGR.md  Install_OpenVGR_precise.md  Multicalib.md  ProjectHome.md  ReleaseNote_0_9_0.md  ReleaseNote_0_9_1.md  TODO.md
branches/cmake/: CMakeLists.txt  ChangeLog.0  README
branches/cmake/example/model/: w3rtvcm.txt
branches/cmake/src/module/component/Measure3D/: CMakeLists.txt  Measure3D.cpp
branches/cmake/src/module/component/MultiDisp/: CMakeLists.txt
branches/cmake/src/module/tool/multicalib/: CMakeLists.txt  multicalib.cpp  optimizer.cpp
branches/yoshimi-test/example/model/: can190_rtvcm.txt
branches/yoshimi-test/example/script/: SetModelIDComp  captrecog.sh
branches/yoshimi-test/src/lib/: Makefile
branches/yoshimi-test/src/lib/libopenvgr/: CMakeLists.txt  RecognitionKernel.h  circle.cpp  drawing.hpp  extractFeature_old.h  parameters.h
branches/yoshimi-test/src/module/: CMakeLists.txt  Makefile
example/component/: CMakeLists.txt
example/component/MultiCameraTrigger/: CMakeLists.txt  MultiCameraTrigger.cpp  MultiCameraTriggerComp_vc8.vcproj
example/component/SendImage/: Makefile.SendImage
example/dataset/param/: can190A.txt  cube.txt  w00.txt  w01.txt  w02.txt
example/model/: cookiebox_rtvcm.wrl  cube_rtvcm.wrl
example/script/: captrecog.sh  stilltest.sh
example/script/substill/: comact.sh  comcon.sh
extra/robotvision/: README
extra/robotvision/src/: Makefile
extra/robotvision/src/component/: Makefile
extra/robotvision/src/tool/: Makefile
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/libcapture/: CMakeLists.txt  capture.c  capture.h
src/lib/libopenvgr/: Makefile  RecognitionKernel.cpp  RecognitionKernel.h  calib.cpp  calib.h  calibUtil.cpp  circle.cpp  circle.h  common.h  conic.cpp  conic.h  constants.hpp  correspondence.cpp  debugutil.cpp  debugutil.h  ellipseIW.h  ellipse_to_ylimit.cpp  extractEdge.cpp  extractEdge.h  extractFeature.cpp  extractFeature.h  extractFeature_old.cpp  extractFeature_old.h  imageUtil.cpp  imageUtil.h  local.h  match3Dfeature.cpp  match3Dfeature.h  mathmisc.hpp  merge_ellipse.cpp  modelFileio.cpp  modelpoints.cpp  modelpoints.h  pairedcircle.cpp  paramEllipseIW.h  parameters.h  quaternion.c  recogImage.cpp  recogImage.h  recogParameter.cpp  (+8 more)
src/module/component/: CMakeLists.txt
src/module/component/Measure3D/: CMakeLists.txt  read_measure3d_config.c
src/module/component/MultiCamera/: CMakeLists.txt  ImgSVC_impl.cpp  MultiCamera.cpp  MultiCamera.h  RTC.xml20101125145934
src/module/component/MultiDisp/: CMakeLists.txt  Makefile.MultiDisp  MultiDispComp.cpp
src/module/component/Recognition/: Makefile.Recognition  Recognition.cpp  VisionSVC_impl.cpp  execute3DRecognition.cpp
src/module/component/RecognitionResultViewer/: CMakeLists.txt  RecognitionResultViewer.cpp  RecognitionResultViewerComp.cpp  VisionSVC_impl.cpp
src/module/tool/: CMakeLists.txt
src/module/tool/VGRModeler/: CMakeLists.txt  ModelInformation.cpp  ModelInformation.h  VGRModeler.cpp  VRMLWriter.cpp
src/module/tool/calibtest/: CMakeLists.txt  cv3d.cpp  globj.cpp  glwindow.cpp  glwindow.hpp
src/module/tool/multicalib/: Makefile  calib_data.c  calib_data.h  calib_proc.c  calib_proc.cpp  calib_proc.h  calib_proc.hpp  camera_param.c  camera_param.h  checker_data.c  checker_data.h  detect_checker.c  detect_checker.cpp  detect_checker.h  genconf.c  ichimatsu.c  local.h  multicalib.cpp  multicalib.h  multicalib.hpp  optimizer.c  optimizer.h  sample.c  (+2 more)
tags/OpenVGR-0.8.1/: Makefile
tags/OpenVGR-0.9.0-alpha/: Copyright  VERSION
tags/OpenVGR-0.9.0-alpha/example/: Makefile
tags/OpenVGR-0.9.0-alpha/src/: Makefile
tags/OpenVGR-0.9.0-beta/: Makefile
tags/OpenVGR-0.9.1/: CMakeLists.txt  Copyright  README
tags/OpenVGR-0.9.1/example/component/: CMakeLists.txt
tags/OpenVGR-0.9.1/example/component/MultiCameraTrigger/: RTC.xml
tags/snapshot-20111128/: ChangeLog.0
trunk/: CMakeLists.txt
trunk/example/component/SendImage/: rtc.conf
trunk/example/component/SetModelID/: CMakeLists.txt
trunk/example/dataset/param/: can190A.txt  cube.txt  w00.txt  w01.txt  w02.txt
trunk/example/model/: w4rtvcm.wrl
trunk/example/script/: SendImageComp  captrecog.sh
trunk/example/script/substill/: comact.sh
trunk/src/lib/: CMakeLists.txt  Makefile
trunk/src/lib/libcapture/: Makefile  capture.c  capture.h
trunk/src/lib/libopenvgr/: Makefile  RecognitionKernel.cpp  calib.h  circle.cpp  common.h  correspondence.cpp  correspondence.hpp  debugutil.cpp  debugutil.h  ellipseIW.h  ellipse_to_ylimit.cpp  extractEdge.cpp  extractFeature.cpp  extractFeature_old.cpp  extractFeature_old.h  imageUtil.cpp  imageUtil.h  match3Dfeature.cpp  match3Dfeature.h  merge_ellipse.cpp  modelpoints.cpp  modelpoints.h  pairedcircle.cpp  paramEllipseIW.h  parameters.h  quaternion.h  recogImage.cpp  recogImage.h  recogParameter.cpp  rtvcm.cpp  score2d.cpp  score2d.h  searchEllipse_IW.cpp  stereo.cpp  stereo.h  vectorutil.cpp  vectorutil.h  vertex.cpp
trunk/src/module/component/: CMakeLists.txt
trunk/src/module/component/Measure3D/: Measure3D.cpp  Measure3D.h
trunk/src/module/component/MultiCamera/: RTC.xml
trunk/src/module/component/MultiDisp/: MultiDisp_vc9.vcproj
trunk/src/module/component/Recognition/: CMakeLists.txt  Makefile.Recognition  Recognition.cpp
trunk/src/module/component/RecognitionResultViewer/: Makefile  Makefile.RecognitionResultViewer  VisionSVC_impl.cpp
trunk/src/module/component/RecognitionResultViewer/doc/doxygen/: Doxyfile
trunk/src/module/tool/: CMakeLists.txt
trunk/src/module/tool/VGRModeler/: ModelInformation.h
trunk/src/module/tool/calibtest/: Makefile  calibtest.cpp  calibtest.hpp  capture.cpp  capture.hpp  cv3d.hpp  globj.hpp  glwindow.cpp  ieee1394board.0
trunk/src/module/tool/multicalib/: CMakeLists.txt  Makefile  calib_proc.cpp  camera_param.c  ichimatsu.c  ichimatsu.cpp  multicalib.cpp  multicalib.hpp  quaternion.h  sample.c
wiki/: Install_OpenVGR.wiki  Install_OpenVGR_precise.wiki  Multicalib.wiki  ReleaseNote_0_9_0.wiki  ReleaseNote_0_9_1.wiki  TODO.wiki
(+326 files in other folders)
